@@ -207,6 +207,7 @@ Scott Carlson
 Scott M. Stirling
 Sean Egan
 Sean P. Kane
+Sebastien Arod
 Shiraz Kanga
 Sebastian Kantha
 Simon Law
