@@ -837,6 +837,10 @@
     <last>Kane</last>
   </name>
   <name>
+    <first>Sebastien</first>
+    <last>Arod</last>
+  </name>
+  <name>
     <first>Shiraz</first>
     <last>Kanga</last>
   </name>
