@@ -74,6 +74,13 @@ try to set up a new connection.</p>
     <td valign="top" align="center">Yes</td>
   </tr>
   <tr>
+    <td valign="top">account</td>
+    <td valign="top">the account to use on the ftp server.
+        <em>since Ant 1.7</em>.
+    </td>
+    <td valign="top" align="center">No</td>
+  </tr>
+  <tr>
     <td valign="top">remotedir</td>
     <td valign="top">remote directory on the
                      ftp server
@@ -689,7 +696,7 @@ selected for remove, so if you need to remove it, specify its parent in
 <code>&lt;fileset&gt;</code> pattern, like <code>"somedir/**"</code>.
 </p>
 <hr>
-<p align="center">Copyright &copy; 2000-2005 The Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2000-2006 The Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
